Rewrote to allow dynamic async queries (contexts with functions)
Probably shouldn't be part of this module… but oh well

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "main": "json-query",
   "scripts": {
-    "test": "tap test/*.js"
+    "test": "tap test/*.js --tap"
   },
   "dependencies": {},
   "devDependencies": {
