--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Matt McKegg <matt@wetsand.co.nz> (http://twitter.com/MattMcKegg)",
   "name": "json-query",
-  "description": "Retrieves values from JSON contexts for data binding. Offers params, nested queries, deep queries, custom reduce/filter functions and simple boolean logic. Browserify compatible.",
+  "description": "Retrieves values from JSON objects for data binding. Offers params, nested queries, deep queries, custom reduce/filter functions and simple boolean logic. Browserify compatible.",
   "version": "0.0.0",
   "homepage": "http://github.com/mmckegg/json-query",
   "repository": {
@@ -19,5 +19,10 @@
   "optionalDependencies": {},
   "engines": {
     "node": "*"
-  }
+  },
+  "keywords": [
+    "data binding",
+    "json",
+    "query"
+  ]
 }
