--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Matt McKegg <matt@wetsand.co.nz> (http://twitter.com/MattMcKegg)",
   "name": "json-query",
   "description": "Retrieves values from JSON objects for data binding. Offers params, nested queries, deep queries, custom reduce/filter functions and simple boolean logic. Browserify compatible.",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "homepage": "http://github.com/mmckegg/json-query",
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   },
   "keywords": [
     "data binding",
+    "filter",
     "json",
     "query"
   ]
