Add suport to select by RegExp and negative selection.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "tap test/*.js --tap"
+    "test": "tape test/*.js --tap"
   },
   "devDependencies": {
     "tape": "*",
