array filters: added boolean conditions, exposed helpers, compare operators
#18
#17

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "test": "tape test/*.js --tap"
   },
   "devDependencies": {
-    "tape": "*",
-    "es5-shim": "~2.1.0"
+    "ava": "^0.14.0",
+    "es5-shim": "~2.1.0",
+    "tape": "*"
   },
   "optionalDependencies": {},
   "engines": {
